Added Big.js library (reducing the pain of handling Numbers in JS). Now able to handle numbers of length upto 16 characters. Improved handling of 'big numbers' (floats and integers).

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ respond.min.js"></script>
             </section>
         </main>
         <script src="public/js/jquery-3.2.1.min.js"></script>
+        <script src="public/js/big.min.js"></script>
         <script src="public/js/main.js"></script>
     </body>
 </html>
