Major improvements. Please read change log for updates.

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@ respond.min.js"></script>
                         <!-- google material backspace icon using its 
                             corresponging code point to support IE9 --> 
                         <button class="btn btn-single" id="backspace"><i class="material-icons">&#xE14A;</i></button>
-                        <button class="btn btn-single operator" value="/">/</button>
+                        <button class="btn btn-single operator">&divide;</button>
                     </section>
                     <section class="clearfix">
                         <button class="btn btn-single number" value="7">7</button>
                         <button class="btn btn-single number" value="8">8</button>
                         <button class="btn btn-single number" value="9">9</button>
-                        <button class="btn btn-single operator" value="x">x</button>
+                        <button class="btn btn-single operator">&times;</button>
                     </section>
                     <section class="clearfix">
                         <button class="btn btn-single number" value="4">4</button>
                         <button class="btn btn-single number" value="5">5</button>
                         <button class="btn btn-single number" value="6">6</button>
-                        <button class="btn btn-single operator" value="-">-</button>
+                        <button class="btn btn-single operator">&minus;</button>
                     </section>
                     <section class="clearfix">
                         <button class="btn btn-single number" value="1">1</button>
                         <button class="btn btn-single number" value="2">2</button>
                         <button class="btn btn-single number" value="3">3</button>
-                        <button class="btn btn-single operator" value="+">+</button>
+                        <button class="btn btn-single operator">&plus;</button>
                     </section>
                     <section class="clearfix">
                         <button class="btn btn-double number" value="0">0</button>
